# rust-solana-scanner

./: .gitignore  Cargo.toml  solana_getBlock.json
.run/: Watch _src.run.xml  Watch _tests_quick_dev.run.xml
src/: crypto.rs  error.rs  log.rs  main.rs  solana_driver.rs  ticket_model.rs
src/http_server/: handlers.rs  mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_solana.rs  routes_tickets.rs
tests/: quick_dev.rs
