[package]
name = "rust-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11.0"

# Serde / json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

# Axum
axum = "0.8.1"

# Solana
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status-client-types = "2.2.1"

# Others
lazy-regex = "3.4.1"
strum_macros = "0.27.1"
uuid = { version = "1", features = ["v4", "fast-rng", ] }

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.10"
